crates/deadline-cli/tests/snapshots/cli_fleet__fleet_get_with_fleet_id_prints_details.snap
---
source: crates/deadline-cli/tests/cli_fleet.rs
info:
  program: deadline
  args:
    - fleet
    - get
    - "--fleet-id"
    - fleet-aaa
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:59627"
    AWS_ENDPOINT_URL_STS: "http://localhost:59627"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpo7Ctxb/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpo7Ctxb
---
success: true
exit_code: 0
----- stdout -----
fleetId: fleet-aaa
displayName: My Fleet


----- stderr -----
