crates/deadline-cli/tests/snapshots/cli_fleet__fleet_list_no_farm_id_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli_fleet.rs
info:
  program: deadline
  args:
    - fleet
    - list
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:58814"
    AWS_ENDPOINT_URL_STS: "http://localhost:58814"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmplb7ybV/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmplb7ybV
---
success: false
exit_code: 1
----- stdout -----
Missing '--farm-id' or default farm ID configuration

----- stderr -----
